# MyPlayer

./: CMakeLists.txt  mywidget.ui
include/decode/: CMakeLists.txt
include/decode/include/: decode.h
include/decode/src/: decode.cpp
include/playmodule/: CMakeLists.txt
include/playmodule/include/: CPlayWidget.h  moc_CPlayWidget.h
include/playmodule/src/: CPlayWidget.cpp
src/: CMakeLists.txt  CTestWidget.h  TestWidget.cpp  main.cpp  ui_widget.h  widget.ui
